manifests/userInfo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userinfo-backend
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: userinfo-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: userinfo-backend
    spec:
      containers:
        - name: userinfo-backend
          image: 811288377093.dkr.ecr.us-west-2.amazonaws.com/userinfo-backend:v4
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          env:   # Setting Enviornmental Variables
            - name: HOST_NAME   # Setting Database host address from configMap
              valueFrom :
                configMapKeyRef :
                  name : db-config
                  key :  host
            - name: DB_NAME  # Setting Database name from configMap
              valueFrom :
                configMapKeyRef :
                  name : db-config
                  key :  dbName
            - name: DB_USERNAME  # Setting Database username from Secret
              valueFrom :
                secretKeyRef :
                  name : db-secrets
                  key :  username
            - name: DB_PASSWORD # Setting Database password from Secret
              valueFrom :
                secretKeyRef :
                  name : db-secrets
                  key :  password
            - name: KAFKA_HOST_NAME   # Setting Kafka host address from configMap
              valueFrom :
                configMapKeyRef :
                  name : kafka-config
                  key :  host
